# DPG

./: .gitignore  Makefile  readme.txt
bat/: gen_stats_batch.py  mtpl_choice.bat  optimization_choice.bat  scenes.bat  stats_all_views_culling_optimizations.bat  stats_dragon_mtp.bat  stats_processing_scripts  stats_route_3_scenes_all_optimizations.bat  stats_route_dragon_separate_optimizations.bat
data/shaders/: cameraLight.frag  text.frag  text.vert
doc/: Doxyfile.in
pres/: DPG2018pres1KoblizekAles.odp  DPG2018pres2KoblizekAles.odp
report/: Makefile  reportdpg.tex
src/: CMakeLists.txt  application.cpp  application.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  circularBuffer.hpp  containment.cpp  containment.hpp  globals.cpp  globals.hpp  libs.hpp  main.cpp  main.hpp  object.cpp  object.hpp  polyline.cpp  polyline.hpp  scene.cpp  scene.hpp  text.cpp  text.hpp  types.hpp  utils.cpp  utils.hpp
src/objLoader/: objLoader.cpp  obj_parser.cpp
src/shaders/: cameraLight.frag  pt.vert
stats/: A10_.stats  A10_l.stats  A10_m.stats  A10_o.stats  A10_olm.stats  City4M.camroute  City4M.speedup  City4M.stats  City4M_10000_com.stats  PowerPlantM.camroute  PowerPlantM.speedup  PowerPlantM.stats  PowerPlantM_10000_com.stats  Thumbs.db  asianDragon.camroute  asianDragon.speedup  asianDragon.stats  asianDragon_100.stats  asianDragon_1000.stats  asianDragon_10000.stats  asianDragon_100000.stats  asianDragon_1000000.stats  asianDragon_10000000.stats  asianDragon_10000_com.stats  asianDragon_B_.stats  asianDragon_B_l.stats  asianDragon_B_m.stats  asianDragon_B_o.stats  asianDragon_B_olm.stats  asianDragon_route.stats  asianDragon_route_100.stats  asianDragon_route_100_l.stats  asianDragon_route_100_m.stats  asianDragon_route_100_o.stats  asianDragon_route_100_olm.stats  block_in_pompeii.high_lod_combined.camroute  block_in_pompeii.high_lod_combined.speedup  block_in_pompeii.high_lod_combined.stats  block_in_pompeii.high_lod_combined_10000_com.stats  city.camroute  (+56 more)
